# SAMD10_XPlor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt_old  arm-none-eabi-gcc.cmake  arm2.cmake  arm3.cmake  main.c
CMake/: arm-none-eabi-gcc.cmake  utils.cmake
asf/: CMakeLists.txt  Default.xml  SAMD10_XPlor.componentinfo.xml  SAMD10_XPlor.cproj  atmel_start_pins.h  driver_init.c  driver_init.h
asf/.atmelstart/: AtmelStart.gpdsc  atmel_start_config.atstart
asf/Config/: RTE_Components.h  hpl_adc_config.h  hpl_dac_config.h  hpl_eic_config.h  hpl_evsys_config.h  hpl_gclk_config.h  hpl_sercom_config.h  hpl_sysctrl_config.h  hpl_tc_config.h  peripheral_clk_config.h
asf/hpl/eic/: hpl_eic.c
asf/hpl/sercom/: hpl_sercom.c
asf/qtouch/: touch.c  touch.h
asf/qtouch/datastreamer/: 03EB00000000000000AA5501.db  03EB00000000000000AA5501.ds  03EB00000000000000AA5501.sc  datastreamer_UART_sam.c
asf/qtouch/include/: touch_api_ptc.h
documentation/: qtouch_samd10_xplainedmini_selfcap_example.rst
examples/: driver_examples.c  driver_examples.h
